--- a/k1921vg015/01-default/.vscode/settings.json
+++ b/k1921vg015/01-default/.vscode/settings.json
@@ -2,8 +2,9 @@
     "cSpell.ignoreRegExpList": ["\\b[0-9A-Z_]+\\b"],
     "cmake.generator": "Ninja",
     "cmake.buildDirectory" : "${workspaceRoot}/build/${buildType}",
-    "cmake.configureEnvironment": { "CMAKE_EXPORT_COMPILE_COMMANDS": "on" },
+    "cmake.configureEnvironment": { "CMAKE_EXPORT_COMPILE_COMMANDS": "on", "CMAKE_USER_HOME": "${userHome}" },
     // cortex-debug (Windows).
+    "cortex-debug.variableUseNaturalFormat": true,
     "cortex-debug.gdbPath.windows": "${env:USERPROFILE}/xpack-riscv-none-elf-gcc-13.3.0-2/bin/riscv-none-elf-gdb.exe",
     "cortex-debug.pyocdPath.windows": "pyocd",
     "cortex-debug.stutilPath.windows": "st-util.exe",
@@ -19,7 +20,7 @@
     "cortex-debug.JLinkGDBServerPath.linux": "JLinkGDBServerCLExe",
     // Настройки проекта.
     "executable": "${command:cmake.buildDirectory}/${workspaceFolderBasename}.elf",
-    "device": "BM-310", //"RISC-V", "SCR1-RV32"
+    "device": "K1921VG015", //"RISC-V", "SCR1-RV32"
     "svdFile" : "${workspaceRoot}/tools/svd/K1921VG015.svd",
     "targetFamily": "k1921vg015",
     //"jlink-id": "nucleo-f030", //-usb ${config:jlink-id},
