--- a/k1921vg015/rtt-default/.vscode/launch.json
+++ b/k1921vg015/rtt-default/.vscode/launch.json
@@ -11,21 +11,34 @@
         "servertype" : "jlink",
         "device" : "${config:device}",
         "preLaunchTask" : "CMake: build",
+        "preRestartCommands" : [ "load", "enable breakpoint", "monitor halt" ],
+        "runToEntryPoint" : "main",
+        //"showDevDebugOutput" : "raw",
+        "svdFile" : "${config:svdFile}",
+        "liveWatch": { "enabled": false, "samplesPerSecond": 2 },
+      },
+      {
+        "name" : "Debug RAM (gdb/jlink)",
+        "cwd" : "${workspaceRoot}",
+        "executable" : "${config:executable}",
+        "interface": "jtag",
+        "request" : "launch",
+        "type" : "cortex-debug",
+        "servertype" : "jlink",
+        "device" : "${config:device}",
+        "preLaunchTask" : "CMake: build",
         //"preRestartCommands" : [ "load", "enable breakpoint", "monitor halt" ],
         // Опционально: можно переопределить поведение сброса, чтобы он не портил регистры
         "overrideLaunchCommands": [
             "monitor halt",
             "monitor reset",
             "load", // Загружаем прошивку
-            "set $pc = 0x40000000", // Ставим PC СРАЗУ ПОСЛЕ загрузки
-            "monitor exec SetRTTSearchRanges 0x40000000 0x40000",
-            "monitor exec SetRTTAddr &_SEGGER_RTT"
+            "set $pc = 0x40000000", // Точка входа в RAM
         ],
         "runToEntryPoint" : "main",
         //"showDevDebugOutput" : "raw",
         "svdFile" : "${config:svdFile}",
         "liveWatch": { "enabled": false, "samplesPerSecond": 2 },
-        "rttConfig": { "enabled": false, "address": "auto", "decoders": [ { "label": "RTT(0)", "port": 0, "timestamp": true, "type": "console" } ] }
       },
       {
         "name" : "Debug (ocd/jlink)",
@@ -37,13 +50,7 @@
         "servertype" : "openocd",
         "device" : "${config:device}",
         "preLaunchTask" : "CMake: build",
-        //"preRestartCommands" : [ "load", "enable breakpoint", "monitor halt" ],
-        // Опционально: можно переопределить поведение сброса, чтобы он не портил регистры
-        "overrideLaunchCommands": [
-            "monitor halt",
-            "monitor reset",
-            "load", // Загружаем прошивку
-        ],
+        "preRestartCommands" : [ "load", "enable breakpoint", "monitor halt" ],
         "runToEntryPoint" : "main",
         //"showDevDebugOutput" : "raw",
         "svdFile" : "${config:svdFile}",
